# VulkanTools

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  BUILD.gn  BUILD.md  BUILDVT.md  CMakeLists.txt  CMakeUserPresets.json  CONTRIBUTING.md  COPYRIGHT.txt  GOVERNANCE.md  LICENSE.txt  LunarGLASS_revision  README.md  api_dump_generator.py  build.py  build_windows_targets.bat  determine_vs_version.py  dri3.md  source_line_info.py  update_external_sources.bat  update_external_sources.sh  vk-generate.py  vk-layer-generate.py  vk-vtgenerate.py  vk-vtlayer-generate.py  vk_helper.py  vk_helper_api_dump.py  vt_genvk.py
jsonGenLayerTests/: CMakeLists.txt  README.md  jsonGenLayerTests.py  main.cpp
jsonGenLayerTests/GoldenJsonFiles/: JSON_GEN_LAYER_TESTS_objectResInfo.hpp  JSON_GEN_LAYER_TESTS_pipeline_0.json  (+1 more)
layer_factory/: CMakeLists.txt  README.md  VkLayer_layer_factory.def  create_json_file.cmake  layer_factory.json.in  layer_factory_linux.json  layer_factory_windows.json
layers/: CMakeLists.txt  README.md  VkLayer_layer_factory.def  api_dump.h  basic.cpp  core_validation_types.h  device_limits.cpp  draw_state.cpp  generic.h  image.cpp  interceptor_objects.h  mem_tracker.cpp  multi.cpp  object_tracker.h  param_checker.cpp  screenshot.cpp  swapchain.cpp  unique_objects.h  vk_layer_config.cpp  vk_layer_logging.h  vk_layer_platform.h  vk_layer_settings.txt  vk_validation_layer_details.md
layersvt/: CMakeLists.txt  FixApidumpJson.sh  README.md  VkLayer_api_dump.def  VkLayer_api_dump.json.in  VkLayer_basic.def  VkLayer_device_simulation.def  VkLayer_device_simulation.json.in  VkLayer_generic.def  VkLayer_json_gen.def  VkLayer_json_gen.json.in  VkLayer_monitor.json.in  VkLayer_multi.def  VkLayer_screenshot.def  VkLayer_screenshot.json.in  api_dump.cpp  api_dump.h  api_dump_handwritten_dispatch.cpp  api_dump_handwritten_functions.h  api_dump_layer.md  basic.cpp  device_simulation.cpp  device_simulation.md  generic.h  monitor.cpp  monitor_layer.md  multi.cpp  screenshot.cpp  screenshot_layer.md  screenshot_parsing.cpp  screenshot_parsing.h  test_validation.cpp  vk_api_dump_helper_cpp.h  vk_layer_settings.txt  vk_layer_table.cpp  vk_layer_table.h  vulkan_json_data.hpp  vulkan_json_layer.hpp
via/: CMakeLists-SDK.txt  CMakeLists.txt  README.md  via.cpp  via_system.cpp  via_system.hpp  via_system_bsd.cpp  via_system_bsd.hpp  via_system_linux.cpp  via_system_linux.hpp  via_system_macos.cpp  via_system_macos.hpp  via_system_windows.cpp  via_system_windows.hpp
vkconfig/: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  active_layers_widget.cpp  active_layers_widget.h  alert.cpp  alert.h  appsingleton.cpp  appsingleton.h  boolsettingwidget.cpp  boolsettingwidget.h  combo_box.h  command_line.cpp  command_line.h  configuration.cpp  configuration.h  configurator.cpp  configurator.h  csettingseditor.cpp  csettingseditor.h  cvulkanconfiguration.cpp  cvulkanconfiguration.h  data.qrc  dialog_about.cpp  dialog_about.h  dialog_about.ui  dialog_applications.cpp  dialog_applications.h  dialog_applications.ui  dialog_custom_paths.cpp  dialog_custom_paths.h  dialog_custom_paths.ui  dialog_layers.cpp  dialog_layers.h  dialog_layers.ui  dialog_vulkan_analysis.cpp  dialog_vulkan_analysis.h  dialog_vulkan_info.cpp  dialog_vulkan_info.h  (+171 more)
vkconfig3/: CMakeLists.txt  README.md  configurator.cpp  configurator.h  dialog_applications.cpp  dialog_applications.ui  dialog_vulkan_info.cpp  main.cpp  main_doc.cpp  main_doc.h  main_gui.cpp  main_layers.cpp  main_reset.cpp  main_reset.h  main_signal.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  settings_tree.cpp  settings_tree.h  settings_validation_areas.cpp  settings_validation_areas.h  vkconfig.pro  vulkan_util.cpp  vulkan_util.h  widget_setting.cpp  widget_setting_bool.h  widget_setting_enum.cpp  widget_setting_enum.h  widget_setting_filesystem.cpp  widget_setting_filesystem.h  widget_setting_flags.cpp  widget_setting_frames.cpp  widget_setting_frames.h  widget_setting_int.cpp  widget_setting_list.cpp  widget_setting_list.h  widget_setting_string.h  widget_tree_friendly_combobox.h
vkconfig_cmd/: CMakeLists.txt  configurator.cpp  configurator.h  main.cpp  main_doc.cpp  main_doc.h  main_export.cpp  main_export.h  main_layers.cpp  main_layers.h  main_loader.cpp  main_loader.h  main_reset.cpp  main_reset.h  main_settings.cpp  main_settings.h  main_signal.cpp  resources.qrc  vulkan_util.cpp  vulkan_util.h
vkconfig_core/: CMakeLists.txt  alert.cpp  alert.h  application.cpp  application.h  application_manager.cpp  application_manager.h  application_singleton.cpp  application_singleton.h  bitfield.cpp  bitfield.h  command_line.cpp  command_line.h  configuration.cpp  configuration.h  configuration_info.cpp  configuration_info.h  configuration_layer.cpp  configuration_layer.h  configuration_manager.cpp  configuration_manager.h  configuration_setting.cpp  configuration_setting.h  configurator.cpp  configurator.h  configurator_signal.cpp  configurator_signal.h  date.cpp  date.h  doc.cpp  doc.h  environment.cpp  environment.h  environment_key.h  executable.cpp  executable.h  executable_manager.cpp  executable_manager.h  file_downloader.cpp  file_downloader.h  (+190 more)
vkconfig_gui/: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  combo_box.h  configuration_layer_widget.cpp  configuration_layer_widget.h  configurator.cpp  configurator.h  dialog_applications.h  dialog_vulkan_analysis.cpp  dialog_vulkan_analysis.ui  dialog_vulkan_info.cpp  dialog_vulkan_info.ui  highlighter.cpp  highlighter.h  item.cpp  item.h  item_list.cpp  item_list.h  item_list_device.cpp  item_list_device.h  item_tree.cpp  item_tree.h  main.cpp  main_doc.cpp  main_signal.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  settings_tree.cpp  settings_tree.h  style.cpp  style.h  tab.cpp  tab.h  tab_about.cpp  tab_about.h  tab_applications.cpp  (+58 more)
vktrace/: .gitignore  CMakeLists.txt  README.md  build_options.cmake  vktrace.md  vktrace_generate.py
vku/: CMakeLists.txt  vk_layer_config.cpp  vk_layer_config.h  vk_layer_settings.cpp  vk_layer_settings.h
(+1072 files in other folders)
